--- a/games/web.css
+++ b/games/web.css
@@ -1,5 +1,5 @@
 body {
-	background-color: #F2F2F2;
+	background-color: #f5f8fa;
 }
 
 html {
@@ -8,29 +8,24 @@ html {
 	margin: 0;
 }
 
-div {
-	box-sizing: border-box;
-}
-
 h1 {
 	text-align: center;
 }
 
 h2 {
 	text-align: center;
-	color: #666666;
 }
 
 #mainWindow {
-	width: 75%;
+	width: 73%;
 	height: 70%;
 	float: left;
-	background: #FFFFFF;
+	background: #DDD;
 	margin-top: 5px;
 	margin-bottom: 5px;
 	padding-right: 5px;
-	border-style: solid;
-	border-width: 0.25px;
+	/* border-style: solid;
+	border-width: 2px; */
 }
 
 #bids {
@@ -40,34 +35,6 @@ h2 {
 	/*border-style: solid;
 	 border-width: 2px;*/
 	overflow: auto;
-}
-
-#itemsTable {
-	font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
-	border-collapse: collapse;
-	background: #A7DBDB;
-}
-
-#itemsTable th {
-	font-size: 13px;
-	font-weight: normal;
-	padding: 8px;
-	border-bottom: 1px solid #fff;
-	background: #69D2E7;
-}
-
-#itemsTable td {
-	padding: 8px;
-	border-bottom: 1px solid #fff;
-	background: #A7DBDB;
-}
-
-input[type=button] {
-	background-color: #4286f4;
-	color: white;
-	display: inline-block;
-	text-decoration:none;
-	text-shadow:0px 1px 0px #2f6627;
 }
 
 #current_bid {
@@ -90,8 +57,7 @@ input[type=button] {
 	width: 25%;
 	height: 70%;
 	float: left;
-	background: #5E97F6;
-	color: white;
+	background: #AAA;
 	margin-top: 5px;
 	margin-bottom: 5px;
 	padding-right: 5px;
@@ -99,9 +65,8 @@ input[type=button] {
 	margin-bottom: 5px;
 	padding-right: 5px;
 	min-width: 300px;
-	border-style: solid;
-	border-width: 0.25px;
-	margin-top: 5px;
+	/* border-style: solid;
+	border-width: 2px; */
 }
 
 player {
@@ -139,11 +104,10 @@ player {
 	display: block;
 	position: absolute;
 	top: 25%;
-	left: 20%;
-	width: 50%;
+	left: 20%; width : 50%;
 	height: 25%;
 	z-index: 1002;
-	background-color: #FFFFFF;
-	border: 7px solid #CACACA;
+	background-color: white;
+	border: 10px solid black;
 	width: 50%;
 }
